# instaui-shiki

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: on_instaui_tag.yml  shiki-ci.yml
__tests/testing_web/: conftest.py  server.py  test_code.py  test_decorations.py
__tests/testing_zero/: test_code.py
npm-shiki/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
npm-shiki/libs/: Shiki-Code.vue  Shiki_Code.vue  main.ts  shiki-code-logic.ts  shiki-core.ts  shiki-engine.ts  shiki-style.less  shiki-transformers.ts  shiki_code.ts  shiki_code_logic.ts  shiki_core.ts  types.ts  utils.ts
npm-shiki/scripts/: builder.py
npm-shiki/types/: instaui.d.ts
shiki-dist/: shiki_code_logic.js
src/instaui_shiki/: __init__.py  _decorations.py  _shiki_code.py  consts.py  resources.py  types.py  version.py  zero_ext_resolver.py
src/instaui_shiki/cdn/: _cdn.py
