[project]
name = "instaui-shiki"
version = "0.2.1"
description = "A Python package for instaui-shiki."
keywords = ["ui", "gui", "web", "shiki" , "syntax-highlighting"]
license = "MIT"
readme = "README.md"
authors = [
    { name = "CrystalWindSnake", email = "568166495@qq.com" }
]

requires-python = ">=3.8,<3.14"

dependencies = [ 
    "instaui ~=0.5.0",
]

[dependency-groups]
dev = [
    "instaui[all]",
    "playwright<1.52.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-playwright<0.7.0",
]
git = [
    "pre-commit>=3.5.0",
]
lint = [
    "ruff>=0.11.8",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/instaui_shiki"]

[tool.hatch.build.targets.sdist]
only-include = ["src/instaui_shiki"]
include = [
    "src/instaui_shiki/static/**",
]

[tool.hatch.build.force-include]
"src/instaui_shiki/static" = "src/instaui_shiki/static"